--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,9 @@ footer {
     text-align: center;
     margin-top: 50px;
 }
+
+@media screen and (max-width: 768px) {
+  .main-width {
+    flex-direction: column;
+    align-items: center;
+  }
