--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,14 @@ main {
 main>section {
     flex: 1;
     text-align: center;
-    width: 390px;
+    width: 100%;
     height: 800px;
     margin-top: 50px;
     padding: 60px 35px 35px 35px;
     border: 1px solid #ecf0f3;
     border-radius: 40px;
     background: white;
+    box-sizing: border-box;
     box-shadow: 13px 13px 20px #cbced1;
 }
 
