--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ main>section {
     flex: 1;
     text-align: center;
     width: 100%;
-    height: 800px;
+    height: 900px;
     margin-top: 50px;
     padding: 60px 35px 35px 35px;
     border: 1px solid #ecf0f3;
@@ -93,10 +93,10 @@ input[type=number] {
     letter-spacing: 1px;
 }
 
-#resetLuas,
-#resetLuas-jg,
-#resetKeliling,
-#resetKeliling-jg {
+#reset-luas,
+#reset-luas-jg,
+#reset-keliling,
+#reset-keliling-jg {
     background-color: rgb(116, 116, 116);
 }
 
